# born

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/struct/: private.rs  public.rs
tests/expand/: public_struct_public_fields.rs  public_struct_public_fields_derive.rs  public_struct_public_fields_derive_serde.expanded.rs  public_struct_public_fields_derive_serde.rs
tests/pass/: mod.rs
tests/pass/readme/: mod.rs  rename.rs
